--- a/lab1/lab1_hw.html
+++ b/lab1/lab1_hw.html
@@ -418,6 +418,10 @@ each one in a separate code chunk.</strong></p>
 <p><strong>5. Did any of the results in #4 surprise you? Write two
 programs that calculate each expression such that the result for the
 first example is 4 and the second example is 8.</strong></p>
+<pre class="r"><code>(6+4)*2-16</code></pre>
+<pre><code>## [1] 4</code></pre>
+<pre class="r"><code>6*4/3</code></pre>
+<pre><code>## [1] 8</code></pre>
 <p><strong>6. <code>Objects</code> in R are a way in which we can store
 data or operations. We will talk more about objects next week. For now,
 make a new object <code>pi</code> as 3.14159265359 by running the
@@ -427,17 +431,24 @@ the environment window in the top right.</strong></p>
 <p><strong>7. Let’s say we want to multiply <code>pi</code> by 2. Using
 the same arithmetic principles that we just learned, write a code chunk
 that performs this operation using the object we created.</strong></p>
+<pre class="r"><code>pi*2</code></pre>
+<pre><code>## [1] 6.283185</code></pre>
 <p><strong>8. In order to get help with any command in R, just type a
 <code>?</code> in front the command of interest. Practice this by
 running the following code chunk.</strong></p>
 <pre class="r"><code>?mean</code></pre>
+<pre><code>## 打开httpd帮助服务器… 好了</code></pre>
 <p><strong>9. Let’s calculate the mean for the numbers 2, 8, 6, 4, 9,
 10. I have built an object <code>x</code> for you below so all you need
 to do is run the first code chunk and then create a second code chunk
 that shows the calculation. Give it a try!</strong></p>
 <pre class="r"><code>x &lt;- c(2, 8, 6, 6, 7, 4, 9, 9, 9, 10)</code></pre>
+<pre class="r"><code>mean(x)</code></pre>
+<pre><code>## [1] 7</code></pre>
 <p><strong>10. Repeat the procedure above, but this time calculate the
 median.</strong></p>
+<pre class="r"><code>median(x)</code></pre>
+<pre><code>## [1] 7.5</code></pre>
 </div>
 <div id="push-your-final-code-to-github" class="section level2">
 <h2>Push your final code to GitHub!</h2>
