--- a/lab3/lab3_hw.html
+++ b/lab3/lab3_hw.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Tian Xia" />
 
-<meta name="date" content="2024-01-21" />
+<meta name="date" content="2024-01-22" />
 
 <title>Lab 3 Homework</title>
 
@@ -376,7 +376,7 @@ display: none;
 
 <h1 class="title toc-ignore">Lab 3 Homework</h1>
 <h4 class="author">Tian Xia</h4>
-<h4 class="date">2024-01-21</h4>
+<h4 class="date">2024-01-22</h4>
 
 </div>
 
@@ -530,7 +530,7 @@ sleep</code></pre>
 ## 30           cd         1.9       0.4          NA 22.10      NA  899.995
 ## 31           cd         2.7       0.1          NA 21.35      NA  800.000
 ## 32           lc         6.2       1.5          NA 17.80 0.32500   85.000
-## &quot;rval&quot;           lc         6.3       0.6          NA 17.70 0.01227    2.625
+## 33           lc         6.3       0.6          NA 17.70 0.01227    2.625
 ## 34         &lt;NA&gt;         8.0       1.9   1.5000000 16.00 1.32000   62.000
 ## 35           vu         9.5       0.9          NA 14.50      NA    1.670
 ## 36           vu         3.3        NA          NA 20.70 5.71200 6654.000
@@ -586,6 +586,7 @@ sleep</code></pre>
 observations)? How do you know? Please show the <em>code</em> that you
 used to determine this below.</li>
 </ol>
+<p>There are 11 variables and 83 observations.</p>
 <pre class="r"><code>dim(sleep)</code></pre>
 <pre><code>## [1] 83 11</code></pre>
 <ol start="4" style="list-style-type: decimal">
@@ -761,8 +762,23 @@ show your code.</li>
 ## [81,] FALSE   FALSE  FALSE
 ## [82,] FALSE   FALSE  FALSE
 ## [83,] FALSE   FALSE  FALSE</code></pre>
-<p>Yes, there is NA, all the “true” show in results are represented as
-“NA” in the data frame.</p>
+<p>Yes, there is NA, all the “true” from the code above show in results
+are represented as “NA” in the data frame.</p>
+<pre class="r"><code>str(sleep)</code></pre>
+<pre><code>## &#39;data.frame&#39;:    83 obs. of  11 variables:
+##  $ name        : chr  &quot;Cheetah&quot; &quot;Owl monkey&quot; &quot;Mountain beaver&quot; &quot;Greater short-tailed shrew&quot; ...
+##  $ genus       : chr  &quot;Acinonyx&quot; &quot;Aotus&quot; &quot;Aplodontia&quot; &quot;Blarina&quot; ...
+##  $ vore        : chr  &quot;carni&quot; &quot;omni&quot; &quot;herbi&quot; &quot;omni&quot; ...
+##  $ order       : chr  &quot;Carnivora&quot; &quot;Primates&quot; &quot;Rodentia&quot; &quot;Soricomorpha&quot; ...
+##  $ conservation: chr  &quot;lc&quot; NA &quot;nt&quot; &quot;lc&quot; ...
+##  $ sleep_total : num  12.1 17 14.4 14.9 4 14.4 8.7 7 10.1 3 ...
+##  $ sleep_rem   : num  NA 1.8 2.4 2.3 0.7 2.2 1.4 NA 2.9 NA ...
+##  $ sleep_cycle : num  NA NA NA 0.133 0.667 ...
+##  $ awake       : num  11.9 7 9.6 9.1 20 9.6 15.3 17 13.9 21 ...
+##  $ brainwt     : num  NA 0.0155 NA 0.00029 0.423 NA NA NA 0.07 0.0982 ...
+##  $ bodywt      : num  50 0.48 1.35 0.019 600 ...</code></pre>
+<p>Also, there is NA in the variable “conservation” and most of the
+numeric values.</p>
 <ol start="5" style="list-style-type: decimal">
 <li>Show a list of the column names is this data frame.</li>
 </ol>
